--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<header>
-			<h1>Curso sobre AutoCad</h1>
+			<h1>Curso sobre Cad</h1>
 		</header>
 
 		<img id="logo do autocad ADICIONAR">
