--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
 
 	<div class="beneficios">
 
-		<h3>Benefícios de Conhecer o AutaCad</h3>
+		<h3>Benefícios de Conhecer o AutoCad</h3>
 
 		<ul>
 
