--- a/Index.html
+++ b/Index.html
@@ -1,54 +1,76 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="reset.css">
+        <title>Natthan Elias - Pitch</title>
+    </head>
+    <body>
+        <section id="sec-1">
+            <div class="container">
+                <h1 class="title">Natthan Elias G. dos Santos</h1>
+                <h2 class="subtext">Pitch Profissional <br> #TeuFuturo 2021</h2>
+                <a href="#sec-2">
+                    <div class="scroll-down"></div>
+                </a>
+            </div>
+          </section>
+          <section id="sec-2">
+            <div class="container">
+                <ul class="text">
+                    <li class="items">Como cheguei até aqui?</li>
+                    <li class="items">Por que estou aqui?</li>
+                </ul>
+                <a href="#sec-3">
+                    <div class="scroll-down"></div>
+                </a>
+            </div>
+          </section>
+          <section id="sec-3">
+            <div class="container">
+                <ul class="text">
+                    <li class="items">No que acredito?</li>
+                </ul>
+                <div class="cit">
+                    <img src="https://j.gifs.com/J8EKjo.gif">
+                    <h2>"... aqui estamos em 2021, e nossos dispositivos
+                     continuam sendo desenvolvidos com base em apps, em vez de pessoas."
+                    </h2>
+                </div>
+                <a href="#sec-4">
+                    <div class="scroll-down"></div>
+                </a>
+            </div>
+          </section>
+          <section id="sec-4">
+            <div class="container">
+                <ul class="text">
+                    <li class="items">O que almejo para o futuro?</li>
+                </ul>
+                <div class="gifs">
+                    <img src="https://j.gifs.com/k26Vp5.gif">
+                    <img src="gif.exo.gif">
+                </div>
+                <a href="#sec-5">
+                    <div class="scroll-down"></div>
+                 </a>
+            </div>
+          </section>
+          <section id="sec-5">
+            <div class="container">
 
-	<head>
-		<meta charset="utf-8">
-		<title>Cursos Razor - AutoCad</title>
-		<link rel="stylesheet" href="style.css">
-		
-	</head>
+                <ul class="icons">
+                    <li class="subtext"><img src="instagram.png">@natthan.elias</li>
+                    <li class="subtext"><img src="linkedin.png">/ NatthanElias</li>
+                    <li class="subtext"><img src="github-logo.png">/ NatthanElias</li>
+                    <li class="subtext"><img src="whatsapp.png">(54) 99173-5161</li>
+                </ul>
 
-	<body>
-		<header>
-			<h1>Curso sobre Cad</h1>
-		</header>
-
-		<img id="logo do autocad ADICIONAR">
-
-	<div>
-		<h2>Sobre o Curso</h2>
-
-		<p> <strong></Strong> </p>
-
-		<p ><em> <strong></strong>. </em></p>
-
-		<p></p>
-	</div>
-
-	<div class="beneficios">
-
-		<h3>Benefícios de Conhecer o AutaCad</h3>
-
-		<ul>
-
-			<li class="itens"></li>
-			<li class="itens"></li>
-			<li class="itens"></li>
-			<li class="itens"></li>
-
-		</ul>
-
-		<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="produtos.html">Nossos Cursos</a></li>
-				<li><a href="contato.html">Contato</a></li>
-				<li><a href="informacoes.html">Mais Informações</a></li>
-			</ul>
-		</nav>
-		</header>
-
-			
-</div>
-
-	</body>
+                <a href="#sec-1">
+                    <div class="scroll-top"></div>
+                </a>
+            </div>
+          </section>
+    </body>
 </html>
