--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
         <title>Natthan Elias - Pitch</title>
     </head>
