--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
-        <title>Natthan Elias - Pitch</title>
+        <title>Cursos Razor - AutoCad</title>
     </head>
     <body>
         <section id="sec-1">
