--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
-        <title>Cursos Razor - AutoCad</title>
+        <title>Razor Academy - AutoCad</title>
     </head>
     <body>
         <section id="sec-1">
             <div class="container">
-                <h1 class="title">Natthan Elias G. dos Santos</h1>
+                <h1 class="title">Curso sobre AutoCad</h1>
                 <h2 class="subtext">Pitch Profissional <br> #TeuFuturo 2021</h2>
                 <a href="#sec-2">
                     <div class="scroll-down"></div>
