alteração textos e imagens

--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,9 @@
     <body>
         <section id="sec-1">
             <div class="container">
+                <img src="Logo-Razor.png">
                 <h1 class="title">Curso sobre AutoCad</h1>
-                <h2 class="subtext">Pitch Profissional <br> #TeuFuturo 2021</h2>
+                <h2 class="subtext">Sobre o Curso: Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais. Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
                 <a href="#sec-2">
                     <div class="scroll-down"></div>
                 </a>
@@ -18,9 +19,14 @@
           </section>
           <section id="sec-2">
             <div class="container">
+                <img src="logo-autocad1.png">
                 <ul class="text">
-                    <li class="items">Como cheguei até aqui?</li>
-                    <li class="items">Por que estou aqui?</li>
+                    <li class="items">Benefícios de Conhecer o AutoCad?</li>
+                    <li class="items">Permite projeções e pesquisas de cálculo</li>
+                    <li class="items">Reduz custos de planejamento</li>
+                    <li class="items">Reduz custos para a construção</li>
+                    <li class="items">Acelera a criação de edificações</li>
+                    <li class="items">Criação de projetos diferenciados</li>
                 </ul>
                 <a href="#sec-3">
                     <div class="scroll-down"></div>
@@ -30,7 +36,12 @@
           <section id="sec-3">
             <div class="container">
                 <ul class="text">
-                    <li class="items">No que acredito?</li>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Nossos Cursos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                        <li><a href="informacoes.html">Mais Informações Sobre a Razor Academy</a></li>
+                    </ul>
                 </ul>
                 <div class="cit">
                     <img src="https://j.gifs.com/J8EKjo.gif">
