--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,19 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <script src="https://kit.fontawesome.com/bfb8753089.js" crossorigin="anonymous"></script>
         <title>Razor Academy - AutoCad</title>
     </head>
+    <header>
+        <nav>
+            <div class="logo"><i class="fas fa-box-open"></i><img src="assets/rzr-cursos.png"></div>
+            <div class="esp">Fale com especialista<i class="fas fa-headset"></i></div>
+        </nav>
+    </header>
     <body>
         <section id="sec-1">
             <div class="container">
-                <img src="Logo-Razor.png">
+                <img src="assets/Logo-Razor.png">
                 <h1 class="title">AutoCad - do zero ao avançado</h1>
                 <h2 class="subtext">Sobre o Curso: Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais. <br> Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
                 <a href="#sec-2">
