--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,10 @@
     </head>
     <header>
         <nav>
-            <div class="logo"><i class="fas fa-box-open"></i><img src="assets/rzr-cursos.png"></div>
-            <div class="esp">Fale com especialista<i class="fas fa-headset"></i></div>
+            <div id="containerHeader">
+                <div class="logo"><i class="fas fa-box-open"></i><img src="assets/rzr-cursos.png"></div>
+                <div class="esp">Fale com especialista<i class="fas fa-headset"></i></div>
+            </div>
         </nav>
     </header>
     <body>
