Cor título formulário

--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
           <section id="sec-4">
             <div class="container">
                 <ul class="text">
-                    <li class="items">Inscreva-se Já!</li>
+                    <li class="items" style="color: white;">Inscreva-se Já!</li>
                 </ul>
                
                     <main>
