--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <header>
 	<nav>
 		<div id="containerHeader">
-			<div class="logo"><i class="fas fa-box-open"></i><img src="assets/rzr-cursos.png"></div>
+			<div class="logo"><img src="assets/rzr-cursos.png"></div>
 			<div class="esp">Fale com especialista<i class="fas fa-headset"></i></div>
 		</div>
 	</nav>
@@ -87,7 +87,7 @@
 				
 			</a>
 		</div>
-		
+	</section>	
 		<footer>
 			<div id="containerFooter">
 				<ul>
@@ -97,4 +97,4 @@
 				</ul>
 			</div>
 		</footer>
-		
+</html>
