--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="stylecarrossel.css">
+	<link rel="stylesheet" href="animation.css">
+
 	<script src="https://kit.fontawesome.com/bfb8753089.js" crossorigin="anonymous"></script>
 	<title>Razor Academy - AutoCad</title>
 </head>
@@ -35,6 +38,19 @@
 				<li class="itens">💰 Reduz custos para a construção</li>
 				<li class="itens">🏗 Acelera a criação de edificações</li>
 			</ul>
+			<main class="main">
+
+				<section class="galery">
+					<div class="fotos">
+						<img src="Imagem-1.jpg" alt="Foto 1">
+						<img src="Imagem-2.jpg" alt="Foto 2">
+						<img src="Imagem-3.jpg" alt="Foto 3">
+						<img src="Imagem-4.jpg" alt="Foto 4">
+						<img src="Imagem-1.jpg" alt="Foto 1">
+					</div>
+				</section>
+	
+			</main>
 			<a href="#sec-3">
 				<div class="scroll-down"></div>
 			</a>
