--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="stylecarrossel.css">
 	<link rel="stylesheet" href="animation.css">
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Saira:wght@100;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/bfb8753089.js" crossorigin="anonymous"></script>
 	<title>Razor Academy - AutoCad</title>
 </head>
@@ -14,14 +17,13 @@
 	<nav>
 		<div id="containerHeader">
 			<div class="logo"><img src="assets/rzr-cursos.png"></div>
-			<div class="esp">Fale com especialista<i class="fas fa-headset"></i></div>
+			<div class="esp">FALE COM UM ESPECIALISTA<i class="fas fa-headset"></i></div>
 		</div>
 	</nav>
 </header>
-<body>
+<body class="font">
 	<section id="sec-1">
 		<div class="container">
-			<img src="assets/Logo-Razor.png">
 			<h1 class="title">AutoCad - do zero ao avançado</h1>
 			<h2 class="subtext">Sobre o Curso: Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais. <br> Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
 			<a href="#sec-2">
@@ -100,13 +102,15 @@
 			</a>
 		</div>
 	</section>	
-		<footer>
-			<div id="containerFooter">
-				<ul>
-					<li class="rodape"><img src="assets/logo_branca_sem_fundo.png"></li>
-					<li class="rodape">&copy; COPYRIGHT 2021 | Razor Academy | Todos os direitos reservados</li>
-					<li class="rodape">atendimento@razorcomputadores.com.br</li>
-				</ul>
-			</div>
-		</footer>
+
+</body>
+<footer>
+	<div id="containerFooter">
+		<ul>
+			<li class="rodape"><img src="assets/logo_branca_sem_fundo.png"></li>
+			<li class="rodape">&copy; COPYRIGHT 2021 | RAZOR COMPUTADORES | Todos os direitos reservados</li>
+			<li class="rodape">atendimento@razorcomputadores.com.br</li>
+		</ul>
+	</div>
+</footer>
 </html>
