--- a/Index.html
+++ b/Index.html
@@ -8,15 +8,15 @@
 	<link rel="stylesheet" href="animation.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Saira:wght@100;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/bfb8753089.js" crossorigin="anonymous"></script>
 	<title>Razor Academy - AutoCad</title>
 </head>
 <header>
 	<nav>
 		<div id="containerHeader">
-			<div class="logo"><img src="assets/rzr-cursos.png"></div>
+			<div class="logo"><img src="assets/rzr-academy.png"></div>
 			<div class="esp">FALE COM UM ESPECIALISTA<i class="fas fa-headset"></i></div>
 		</div>
 	</nav>
@@ -25,7 +25,7 @@
 	<section id="sec-1">
 		<div class="container">
 			<h1 class="title">AutoCad - do zero ao avançado</h1>
-			<h2 class="subtext">Sobre o Curso: Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais. <br> Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
+			<h2 class="subtext">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais. <br> Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
 			<a href="#sec-2">
 				<div class="scroll-down"></div>
 			</a>
