imagens, carrosel e seção 3

--- a/Index.html
+++ b/Index.html
@@ -51,6 +51,7 @@
 						<img src="Imagem-2.jpg" alt="Foto 2">
 						<img src="Imagem-3.jpg" alt="Foto 3">
 						<img src="Imagem-4.jpg" alt="Foto 4">
+						<img src="Imagem-5.jpg" alt="Foto 5">
 						<img src="Imagem-1.jpg" alt="Foto 1">
 					</div>
 				</section>
@@ -63,7 +64,7 @@
 	</section>
 	<section id="sec-3">
 		<div class="container">
-			<ul class="informações">
+				<ul class="informações">
 				<li class="itens-informações">Home</li>
 				<li class="itens-informações">Nossos Cursos</li>
 				<li class="itens-informações">Contato</li>
