--- a/Index.html
+++ b/Index.html
@@ -25,11 +25,11 @@
 	<section id="sec-1">
 		<div class="overlay"></div>
 		<div class="container">
-			<h1 class="title">AutoCAD - do zero ao avançado</h1>
+			<h1 class="title">Aprenda AutoCAD na prática</h1>
 			<h2 class="subtext">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais. <br>
 				 Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
 			<div id="button">
-			<button type="submit">Comece aprender ja!</button>
+			<button type="submit" class="enviar">Comece aprender ja!</button>
 			</div>
 		</div>
 
