--- a/Index.html
+++ b/Index.html
@@ -8,14 +8,14 @@
 	<link rel="stylesheet" href="animation.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/bfb8753089.js" crossorigin="anonymous"></script>
 	<title>Razor Academy - AutoCad</title>
 </head>
 <header>
 	<nav>
-		<div id="containerHeader">
+		<div class="container">
 			<div class="logo"><img src="assets/rzr-academy.png"></div>
 			<div class="esp">FALE COM UM ESPECIALISTA<i class="fas fa-headset"></i></div>
 		</div>
@@ -34,12 +34,16 @@
 				</div>
 			</div>
 		</div>
-
 	</section>
 	<section id="sec-2">
 		<div class="container">
+			<h3 class="titulo-beneficios">Aprovacao social</h3>
+		</div>
+	</section>
+	<section id="sec-3">
+		<div class="container">
 			<h3 class="titulo-beneficios">Benefícios do AutoCad:</h3>
-			<ul class="text">
+			<ul class="subtext">
 				<li class="itens">🔍 Permite projeções e pesquisas de cálculo</li>
 				<li class="itens">👷 Reduz custos de planejamento</li>
 				<li class="itens">💰 Reduz custos para a construção</li>
@@ -59,30 +63,19 @@
 				</section>
 	
 			</main>
-			<a href="#sec-3">
-				<div class="scroll-down"></div>
-			</a>
-		</div>
-	</section>
-	<section id="sec-3">
-		<div class="container">
-				<ul class="informações">
-				<li class="itens-informações">Home</li>
-				<li class="itens-informações">Nossos Cursos</li>
-				<li class="itens-informações">Contato</li>
-				<li class="itens-informações">Mais Informações Sobre a Razor Academy</li>
-			</ul>
-			
-			<div class="cit">
-				<h2>
-				</h2>
-			</div>
-			<a href="#sec-4">
-				<div class="scroll-down"></div>
-			</a>
 		</div>
 	</section>
 	<section id="sec-4">
+		<div class="container">
+			<h3 class="titulo-beneficios">Carrossel</h3>
+		</div>
+	</section>
+	<section id="sec-5">
+		<div class="container">
+			<h3 class="titulo-beneficios">Aprovacao social</h3>
+		</div>
+	</section>
+	<section id="sec-6">
 		<div class="container">
 			<ul class="text">
 				<li class="items" style="color: white;">Inscreva-se Já!</li>
@@ -101,11 +94,6 @@
 					<input type="submit" value="Enviar inscrição" class="enviar">
 				</form>
 			</main>
-			
-			<a href="#sec-5">
-				<div class="scroll-down"></div>
-				
-			</a>
 		</div>
 	</section>	
 
