--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="font">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
@@ -21,22 +21,41 @@
 		</div>
 	</nav>
 </header>
-<body class="font">
+<body>
 	<section id="sec-1">
 		<div class="container">
 			<div class="box">
-				<h1 class="title">Aprenda AutoCAD na prática</h1>
-				<h2 class="subtext">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais. <br>
-					Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
-				<div id="button">
-				<button type="submit" class="enviar">Comece aprender ja!</button>
+				<div class="texto">
+					<h1 class="title">AutoCAD <br> na prática</h1>
+					<h2 class="subtext">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais.
+						Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
+					<div class="button">
+						<button type="submit" class="enviar">Comece já a aprender!</button>
+					</div>	
+				</div>
+				<div class="yt">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/B1DHB6hz07Y" title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
 	</section>
 	<section id="sec-2">
 		<div class="container">
-			<h3 class="titulo-beneficios">Aprovacao social</h3>
+			<div class="lorem">
+				<h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad repudiandae expedita et voluptatum iure sint minus neque tempore. Est deserunt quas corporis inventore quasi, commodi iste totam! Eius, itaque enim?</h6>
+			</div>	
+			<div class="avatar">
+				<img src="assets/anon-profile.png">
+				<h6>Lorem ipsum</h6>
+			</div>	
+			<div class="star5">
+				<img src="assets/star.png">
+				<img src="assets/star.png">
+				<img src="assets/star.png">
+				<img src="assets/star.png">
+				<img src="assets/star.png">
+			</div>	
 		</div>
 	</section>
 	<section id="sec-3">
