--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 	<nav>
 		<div class="container">
 			<div class="logo"><img src="assets/rzr-academy.png"></div>
-			<div class="esp">FALE COM UM ESPECIALISTA<i class="fas fa-headset"></i></div>
+			<div class="esp">FALAR COM ESPECIALISTA<i class="fas fa-headset fa-lg"></i></div>
 		</div>
 	</nav>
 </header>
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="box">
 				<div class="texto">
-					<h1 class="title">AutoCAD <br> na prática</h1>
+					<h1 class="title">AutoCAD <br> na prática.</h1>
 					<h2 class="subtext">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais.
 						Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
 					<div class="button">
@@ -60,6 +60,22 @@
 	</section>
 	<section id="sec-3">
 		<div class="container">
+			<div class="imp">
+				<h3 class="titulo-beneficios">Impressione seus clientes</h3>
+				<img class="deal" src="assets/deal.png">
+			</div>
+			<div>
+				<ul class="subtext">
+					<li><i class="fas fa-check"></i> Reduza custos de planejamento</li>
+					<li><i class="fas fa-check"></i> Reduza custos para a construção</li>
+					<li><i class="fas fa-check"></i> Faça projeções e pesquisas de cálculo</li>
+					<li><i class="fas fa-check"></i> Acelere a criação de edificações</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section id="sec-4">
+		<div class="container">
 			<h3 class="titulo-beneficios">Benefícios do AutoCad:</h3>
 			<ul class="subtext">
 				<li class="itens">🔍 Permite projeções e pesquisas de cálculo</li>
@@ -79,13 +95,6 @@
 						<img src="Imagem-1.jpg" alt="Foto 1">
 					</div>
 				</section>
-	
-			</main>
-		</div>
-	</section>
-	<section id="sec-4">
-		<div class="container">
-			<h3 class="titulo-beneficios">Carrossel</h3>
 		</div>
 	</section>
 	<section id="sec-5">
@@ -96,7 +105,7 @@
 	<section id="sec-6">
 		<div class="container">
 			<ul class="text">
-				<li class="items" style="color: white;">Inscreva-se Já!</li>
+				<li class="title" style="color: white;">Inscreva-se Já!</li>
 			</ul>
 			
 			<main>
