--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="stylecarrossel.css">
-	<link rel="stylesheet" href="animation.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,8 +26,7 @@
 			<div class="box">
 				<div class="texto">
 					<h1 class="title">AutoCAD <br> na prática.</h1>
-					<h2 class="subtext">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais.
-						Portanto, este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
+					<h2 class="subtext">este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
 					<div class="button">
 						<button type="submit" class="enviar">Comece já a aprender!</button>
 					</div>	
@@ -76,25 +74,50 @@
 	</section>
 	<section id="sec-4">
 		<div class="container">
-			<h3 class="titulo-beneficios">Benefícios do AutoCad:</h3>
-			<ul class="subtext">
-				<li class="itens">🔍 Permite projeções e pesquisas de cálculo</li>
-				<li class="itens">👷 Reduz custos de planejamento</li>
-				<li class="itens">💰 Reduz custos para a construção</li>
-				<li class="itens">🏗 Acelera a criação de edificações</li>
-			</ul>
-			<main class="main">
+			<div class="transforme">
+				<h3 class="titulo-transforme">Transforme seus projetos</h3>
+				<h4 class="subtext-transforme">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais.</h4>
+			</div>
+			<div class="carousel">
+				<div class="fotos">
+				<input type="radio" name="radio-btn" id="radio1">
+				<input type="radio" name="radio-btn" id="radio2">
+				<input type="radio" name="radio-btn" id="radio3">
+				<input type="radio" name="radio-btn" id="radio4">
+				<input type="radio" name="radio-btn" id="radio5">
 
-				<section class="galery">
-					<div class="fotos">
-						<img src="Imagem-1.jpg" alt="Foto 1">
-						<img src="Imagem-2.jpg" alt="Foto 2">
-						<img src="Imagem-3.jpg" alt="Foto 3">
-						<img src="Imagem-4.jpg" alt="Foto 4">
-						<img src="Imagem-5.jpg" alt="Foto 5">
-						<img src="Imagem-1.jpg" alt="Foto 1">
-					</div>
-				</section>
+				<div class="slide first">
+					<img src="Imagem-1.jpg" alt="">
+				</div>
+				<div class="slide">
+					<img src="Imagem-2.jpg" alt="">
+				</div>
+				<div class="slide">
+					<img src="Imagem-3.jpg" alt="">
+				</div>
+				<div class="slide">
+					<img src="Imagem-4.jpg" alt="">
+				</div>
+				<div class="slide">
+					<img src="Imagem-5.jpg" alt="">
+				</div>
+
+				<div class="nav-auto">
+					<div class="a-b1"></div>
+					<div class="a-b2"></div>
+					<div class="a-b3"></div>
+					<div class="a-b4"></div>
+					<div class="a-b5"></div>
+				</div>
+				<div class="nav-m">
+					<label for="radio1" class="m-btn"></label>
+					<label for="radio2" class="m-btn"></label>
+					<label for="radio3" class="m-btn"></label>
+					<label for="radio4" class="m-btn"></label>
+					<label for="radio5" class="m-btn"></label>
+				</div>
+			</div>
+			</div>
 		</div>
 	</section>
 	<section id="sec-5">
