--- a/Index.html
+++ b/Index.html
@@ -79,50 +79,103 @@
 				<h4 class="subtext-transforme">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais.</h4>
 			</div>
 			<div class="carousel">
-				<div class="fotos">
-				<input type="radio" name="radio-btn" id="radio1">
-				<input type="radio" name="radio-btn" id="radio2">
-				<input type="radio" name="radio-btn" id="radio3">
-				<input type="radio" name="radio-btn" id="radio4">
-				<input type="radio" name="radio-btn" id="radio5">
-
-				<div class="slide first">
-					<img src="Imagem-1.jpg" alt="">
-				</div>
-				<div class="slide">
-					<img src="Imagem-2.jpg" alt="">
-				</div>
-				<div class="slide">
-					<img src="Imagem-3.jpg" alt="">
-				</div>
-				<div class="slide">
-					<img src="Imagem-4.jpg" alt="">
-				</div>
-				<div class="slide">
-					<img src="Imagem-5.jpg" alt="">
+				<i class= "fas fa-chevron-right" id="nextBtn"></i>	
+				<i class="fas fa-chevron-left" id="prevBtn"></i>			
+				<div class="slider">
+					<img src="assets/Imagem-5.jpg" id="lastClone">
+					<img src="assets/Imagem-1.jpg">
+					<img src="assets/Imagem-2.jpg">
+					<img src="assets/Imagem-3.jpg">
+					<img src="assets/Imagem-4.jpg">
+					<img src="assets/Imagem-5.jpg">
+					<img src="assets/Imagem-1.jpg" id="firstClone">
 				</div>
 
-				<div class="nav-auto">
-					<div class="a-b1"></div>
-					<div class="a-b2"></div>
-					<div class="a-b3"></div>
-					<div class="a-b4"></div>
-					<div class="a-b5"></div>
-				</div>
-				<div class="nav-m">
-					<label for="radio1" class="m-btn"></label>
-					<label for="radio2" class="m-btn"></label>
-					<label for="radio3" class="m-btn"></label>
-					<label for="radio4" class="m-btn"></label>
-					<label for="radio5" class="m-btn"></label>
-				</div>
 			</div>
 			</div>
 		</div>
 	</section>
 	<section id="sec-5">
 		<div class="container">
-			<h3 class="titulo-beneficios">Aprovacao social</h3>
+			<div>
+				<h3 class="titulo-social">O que nossos alunos acham :</h3>
+			</div>
+			<div class="depoimento">
+				<div class="text-box">
+					<div>
+						<h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius dolorem accusantium rerum officiis eligendi numquam quaerat distinctio voluptates ab mollitia consectetur repudiandae illum, atque iste, doloribus quis debitis cupiditate ex.</h6>
+					</div>
+					<div class="aluno">
+						<div class="avatar">
+							<img src="assets/anon-profile.png">
+							<h6>Lorem ipsum</h6>
+						</div>	
+						<div class="star5">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+						</div>
+					</div>	
+				</div>
+				<div class="text-box">
+					<div>
+						<h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius dolorem accusantium rerum officiis eligendi numquam quaerat distinctio voluptates ab mollitia consectetur repudiandae illum, atque iste, doloribus quis debitis cupiditate ex.</h6>
+					</div>
+					<div class="aluno">
+						<div class="avatar">
+							<img src="assets/anon-profile.png">
+							<h6>Lorem ipsum</h6>
+						</div>	
+						<div class="star5">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+						</div>
+					</div>	
+				</div>
+			</div>
+			<div class="depoimento">
+				<div class="text-box">
+					<div>
+						<h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius dolorem accusantium rerum officiis eligendi numquam quaerat distinctio voluptates ab mollitia consectetur repudiandae illum, atque iste, doloribus quis debitis cupiditate ex.</h6>
+					</div>
+					<div class="aluno">
+						<div class="avatar">
+							<img src="assets/anon-profile.png">
+							<h6>Lorem ipsum</h6>
+						</div>	
+						<div class="star5">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+						</div>
+					</div>	
+				</div>
+				<div class="text-box">
+					<div>
+						<h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius dolorem accusantium rerum officiis eligendi numquam quaerat distinctio voluptates ab mollitia consectetur repudiandae illum, atque iste, doloribus quis debitis cupiditate ex.</h6>
+					</div>
+					<div class="aluno">
+						<div class="avatar">
+							<img src="assets/anon-profile.png">
+							<h6>Lorem ipsum</h6>
+						</div>	
+						<div class="star5">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+							<img src="assets/star.png">
+						</div>
+					</div>	
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="sec-6">
@@ -146,7 +199,7 @@
 			</main>
 		</div>
 	</section>	
-
+<script src="app.js"></script>
 </body>
 <footer>
 	<div id="containerFooter">
