--- a/Index.html
+++ b/Index.html
@@ -194,17 +194,13 @@
 	</section>
 	<section id="sec-6">
 		<div class="container">
-			<ul class="text">
-				<li class="register-title" style="color: white;">Pronto para começar? Informe seu email para registrar sua assinatura!</li>
-			</ul>
-			
-			<main>
-				<form>
-					<input type="email" id="email" class="input-padrao" required placeholder="✉ E-mail">
-					
+			<div>
+				<h2 class="subtext">Pronto para começar? Informe seu email para registrar sua assinatura!</h2>
+			</div>			
+				<form class="cta">
+					<input type="email" id="email" class="input-padrao" required placeholder="✉ E-mail">					
 					<input type="submit" value="Enviar inscrição" class="enviar">
 				</form>
-			</main>
 		</div>
 	</section>	
 <script src="app.js"></script>
