--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 					<h1 class="title">AutoCAD <br> na prática.</h1>
 					<h2 class="subtext">este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
 					<div class="button">
-						<button type="submit" class="enviar">Comece já a aprender!</button>
+						<button type="submit" class="btn">Comece já a aprender!</button>
 					</div>	
 				</div>
 				<div class="yt">
@@ -199,14 +199,14 @@
 			</div>			
 				<form class="cta">
 					<input type="email" id="email" class="input-padrao" required placeholder="✉ E-mail">					
-					<input type="submit" value="Enviar inscrição" class="enviar">
+					<input type="submit" value="Enviar inscrição" class="btn">
 				</form>
 		</div>
 	</section>	
 <script src="app.js"></script>
 </body>
 <footer>
-	<div id="containerFooter">
+	<div class="container">
 		<ul>
 			<li class="rodape"><img src="assets/logo_branca_sem_fundo.png"></li>
 			<li class="rodape">&copy; COPYRIGHT 2021 | RAZOR COMPUTADORES | Todos os direitos reservados</li>
