animação do texto

--- a/Index.html
+++ b/Index.html
@@ -208,6 +208,7 @@
 		</div>
 	</section>	
 <script src="app.js"></script>
+<script src="animação.js" ></script>
 </body>
 <footer>
 	<div id="containerFooter">
