--- a/Index.html
+++ b/Index.html
@@ -27,8 +27,10 @@
 			<div class="box">
 				<div class="texto">
 					<h1 class="title">AutoCAD <br> na prática.</h1>
-					<h2 class="subtext">este curso visa ensinar todas a possibilidades de trabalho com este software, para que você possa tirar o máximo de desempenho dele e tornar seus projetos ainda mais incríveis.</h2>
+					<h2 class="subtext1">100% online.</h2>
+					<h2 class="subtext2">Aprenda em aulas de apenas 15 minutos.</h2>
 					<div class="button">
+						<h6>Não perca tempo</h6>
 						<button type="submit" class="btn">Comece já a aprender!</button>
 					</div>	
 				</div>
@@ -67,8 +69,9 @@
 				<ul class="subtext">
 					<li><i class="fas fa-check"></i> Reduza custos de planejamento</li>
 					<li><i class="fas fa-check"></i> Reduza custos para a construção</li>
-					<li><i class="fas fa-check"></i> Faça projeções e pesquisas de cálculo</li>
+					<li><i class="fas fa-check"></i> Efetue as projeções do seu projeto</li>
 					<li><i class="fas fa-check"></i> Acelere a criação de edificações</li>
+					<li><i class="fas fa-check"></i> Execute pesquisas de cálculo</li>
 				</ul>
 			</div>
 		</div>
@@ -186,7 +189,6 @@
 		</div>
 	</section>	
 <script src="app.js"></script>
-<script src="animação.js" ></script>
 </body>
 <footer>
 	<div class="container">
