--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
 	<section id="sec-3">
 		<div class="container">
 			<div class="imp">
-				<h3 class="titulo-beneficios">Impressione seus clientes</h3>
+				<h3 class="titulo">Impressione seus clientes</h3>
 				<img class="deal" src="assets/deal.png">
 			</div>
 			<div>
@@ -79,8 +79,8 @@
 	<section id="sec-4">
 		<div class="container">
 			<div class="transforme">
-				<h3 class="titulo-transforme">Transforme seus projetos</h3>
-				<h4 class="subtext-transforme">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais.</h4>
+				<h3 class="titulo">Transforme seus projetos</h3>
+				<h4 class="subtext">Softwares de arquitetura e engenharia são ferramentas imprescindíveis para apresentar projetos precisos, tanto na estética quanto nos cálculos estruturais.</h4>
 			</div>
 			<div class="galery">
 				<div class="fotos">
@@ -97,7 +97,7 @@
 	<section id="sec-5">
 		<div class="container">
 			<div>
-				<h3 class="titulo-social">O que nossos alunos acham :</h3>
+				<h3 class="titulo">O que nossos alunos acham :</h3>
 			</div>
 			<div class="depoimento">
 				<div class="text-box">
@@ -188,7 +188,6 @@
 				</form>
 		</div>
 	</section>	
-<script src="app.js"></script>
 </body>
 <footer>
 	<div class="container">
@@ -199,4 +198,5 @@
 		</ul>
 	</div>
 </footer>
+<script src="app.js"></script>
 </html>
